nova mala dorada

--- a/stranica/home.html
+++ b/stranica/home.html
@@ -3,6 +3,6 @@
 	<title>Bokić Coursera</title>
 </head>
 <body>
-<h1>Bok Coursera - ovo je nova važna dorada vauuu</h1>
+<h1>Bok Coursera - ovo je nova važna dorada vauuu  - biskupppp</h1>
 </body>
 </html>
